feat: adiciona properties.css

--- a/index.html
+++ b/index.html
@@ -2,18 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin CSS Foundations - Practice</title>        
-        <link rel="stylesheet" href="./css/styles.css">
+        <title>Odin CSS Foundations - Practice</title>
     </head>
 
     <body>
-        <div class="ancestor">
-            <div class="contents">
-                <div class="contents">
-                </div>
-            </div>
-        </div>
-
-        <div class="contents"></div>
+        <h1>Odin CSS Foundations</h1>
     </body>
 </html>
