feat: adiciona styles.css e atualiza comentários

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin CSS Foundations - Practice</title>
+        <link rel="stylesheet" href="./css/styles.css">
+        <!-- Internal CSS
+        <style>
+
+        </style> -->
     </head>
 
     <body>
         <h1>Odin CSS Foundations</h1>
+        <div>Odin CSS Foundations</div>
+        <p>Odin CSS Foundations</p>
+        
+        <!-- Inline CSS -->
+        <!-- <div style="color: white; background-color: black;">Odin CSS Foundations</div> -->
     </body>
 </html>
